--- a/zh/index.html
+++ b/zh/index.html
@@ -19,7 +19,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
-                <span class="d-block d-lg-none">Clarence Taylor</span>
+                <span class="d-block d-lg-none">LIYOU CHEN</span>
                 <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="../assets/img/profile.jpg" alt="..." /></span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
@@ -142,7 +142,7 @@
                             • Team Global Express, NetSuite, Google Geocoding, Firebase 等等服務 API 串接<br>
                             • 協助團隊建立開發流程與敏捷開發的專案管理工具</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">2024/6 - 在職中 | Taichung, Taiwan</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">2024/10 - 在職中 | Taichung, Taiwan</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
@@ -167,7 +167,7 @@
                             <h3 class="mb-0">逢甲大學</h3>
                             <div class="subheading mb-3">統計學系</div>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">2006年8月 - 2010年5月</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">2015年9月 - 2019年9月</span></div>
                     </div>
                     
                     <h3 class="mb-5">證照與語言能力</h3>
