--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
-                <span class="d-block d-lg-none">Clarence Taylor</span>
+                <span class="d-block d-lg-none">LIYOU CHEN</span>
                 <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="../assets/img/profile.jpg" alt="..." /></span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
@@ -142,7 +142,7 @@
                             • Integrated with Team Global Express, NetSuite, Google Geocoding, Firebase and other services<br>
                             • Implemented agile development processes and project management tools</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">June 2024 - Present | Taichung, Taiwan</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Oct. 2024 - Present | Taichung, Taiwan</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
@@ -167,7 +167,7 @@
                             <h3 class="mb-0">Feng Chia University</h3>
                             <div class="subheading mb-3">Department of Statistics</div>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2006 - May 2010</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">November 2015 - November 2019</span></div>
                     </div>
                     
                     <h3 class="mb-5">Certifications & Language Proficiency</h3>
