--- a/jp/index.html
+++ b/jp/index.html
@@ -19,7 +19,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
-                <span class="d-block d-lg-none">Clarence Taylor</span>
+                <span class="d-block d-lg-none">LIYOU CHEN</span>
                 <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="../assets/img/profile.jpg" alt="..." /></span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
@@ -141,7 +141,7 @@
                             • 外部サービス（Team Global Express、NetSuite等）API連携<br>
                             • アジャイル開発プロセス・管理ツールの導入</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">2024年6月 - 現在 | 台中市、台湾</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">2024年10月 - 現在 | 台中市、台湾</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
@@ -166,7 +166,7 @@
                             <h3 class="mb-0">逢甲大学</h3>
                             <div class="subheading mb-3">統計学科</div>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">2006年8月 - 2010年5月</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">2015年9月 - 2019年9月</span></div>
                     </div>
                     
                     <h3 class="mb-5">資格と語学力</h3>
